<resources>
    <string name="app_name">MSS</string>
    <string name="action_settings">Settings</string>
    <string name="logo_description">utaLogo</string>
    <string name="project_name_text">MAV SCHEDULING SERVICE</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="registration_title">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button_text">REGISTER</string>

    <string name="title_activity_create_schedule">CreateScheduleActivity</string>
    <string name="title_activity_security">SecurityActivity</string>
    <string name="title_activity_view_schedule">ViewScheduleActivity</string>
    <string name="title_activity_login">LogIn</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_register_user">RegisterUserActivity</string>
    <string name="title_activity_add_blocked_time">AddBlockedTimeActivity</string>
    <string name="title_activity_add_class">AddClassActivity</string>
    <string name="title_activity_edit_user">EditUserActivity</string>
    <string name="title_activity_store_schedule">StoreScheduleActivity</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="title_activity_select_class">SelectClassActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_schedule_screen">ScheduleScreenActivity</string>

</resources>