<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="omicron.mss.LoginActivity"
    android:background="#0066B0">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoView"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/uta_logo2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/project_name_text"
        android:id="@+id/titleView"
        android:layout_below="@+id/logoView"
        android:gravity="center_horizontal"
        android:textColor="#F47F24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/usernameText"
        android:hint="@string/username_text"
        android:textColorHint="#ff959395"
        android:background="@drawable/text_box"
        android:layout_below="@+id/titleView"
        android:layout_alignLeft="@+id/titleView"
        android:layout_alignStart="@+id/titleView"
        android:layout_alignRight="@+id/titleView"
        android:layout_alignEnd="@+id/titleView"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|start" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:hint="@string/password_text"
        android:textColorHint="#ff959395"
        android:background="@drawable/text_box"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/usernameText"
        android:layout_alignRight="@+id/usernameText"
        android:layout_alignEnd="@+id/usernameText"
        android:layout_alignLeft="@+id/usernameText"
        android:layout_alignStart="@+id/usernameText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordText"
        android:layout_alignEnd="@+id/passwordText"
        android:onClick="login"
        android:layout_marginTop="10dp"
        android:background="#F47F24"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Forgot your password?"
        android:onClick = "gotoForget"
        android:id="@+id/forgotPassView"
        android:gravity="center_vertical|center_horizontal"
        android:clickable="true"
        android:layout_alignTop="@+id/loginButton"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText"
        android:layout_alignBottom="@+id/loginButton"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Need to register?"
        android:onClick="gotoRegister"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:textColor="#FFFFFF" />

</RelativeLayout>
